--- a/package.json
+++ b/package.json
@@ -18,13 +18,18 @@
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
+    "css-loader": "^0.23.1",
     "html-webpack-plugin": "^2.22.0",
     "snabbdom-jsx": "^0.3.0",
+    "style-loader": "^0.13.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^2.3.1",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.0"
   },
   "dependencies": {
     "@cycle/dom": "^12.2.1",
+    "@cycle/http": "^10.2.1",
     "@cycle/xstream-run": "^3.1.0",
     "xstream": "^6.1.0"
   },
