--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
+    "babel-register": "^6.11.6",
     "css-loader": "^0.23.1",
     "html-webpack-plugin": "^2.22.0",
+    "resolve-url-loader": "^1.6.0",
     "snabbdom-jsx": "^0.3.0",
     "style-loader": "^0.13.1",
     "stylus": "^0.54.5",
@@ -34,6 +36,9 @@
     "xstream": "^6.1.0"
   },
   "ava": {
-    "babel": "inherit"
+    "babel": "inherit",
+    "require": [
+      "babel-register"
+    ]
   }
 }
